<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".TermoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.80">

        <LinearLayout
            android:id="@+id/texto_termo_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloTermo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/termo_titulo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#353434"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-black" />


            <TextView
                android:id="@+id/textoTermo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="#FFFFFF"
                android:hapticFeedbackEnabled="false"
                android:padding="20dp"
                android:scrollbars="vertical"
                android:shadowColor="#00424242"
                android:shadowRadius="0.5"
                android:text="@string/termo_texto"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="16sp"
                app:fontFamily="sans-serif" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.20">

        <LinearLayout
            android:id="@+id/radio_termo_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:scrollbars="vertical">

                <RadioButton
                    android:id="@+id/radioYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/termo_aceito"
                    tools:layout_editor_absoluteX="35dp"
                    tools:layout_editor_absoluteY="628dp" />

                <RadioButton
                    android:id="@+id/radioNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/termo_negado" />

            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

